Fixes #1, #73737D 4.5:1 contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,7 +94,7 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 400;
-		color: #919499;
+		color: #73737D;
 		font-size: 16pt;
 		line-height: 1.75em;
 		letter-spacing: 0.025em;
